--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,9 +7,8 @@ on:
     branches: [ 0.8.X ]
 
 jobs:
-
   build:
-    runs-on: ubuntu-latest
+    runs-on: node:16-alpine3.16
 
     strategy:
       matrix:
@@ -24,8 +23,8 @@ jobs:
     - name: Install dependencies
       run: |
         cd ruoyi-ui
-        npm install --registry=https://registry.npmmirror.com
-        npm run build:stage
+        npm install
+        npm run build:prod
       env:
         CI: true
     - name: Upload Artifact  # 添加上传文件步骤
