--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,27 +7,20 @@ on:
     branches: [ 0.8.X ]
 
 jobs:
+
   build:
     runs-on: node:16-alpine3.16
 
-    strategy:
-      matrix:
-        node-version: [16.x]
-
     steps:
     - uses: actions/checkout@v3
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
-      with:
-        node-version: ${{ matrix.node-version }}
-    - name: Install dependencies
+    - name: 编译项目
       run: |
         cd ruoyi-ui
         npm install
         npm run build:prod
       env:
         CI: true
-    - name: Upload Artifact  # 添加上传文件步骤
+    - name: 上传编译目录
       uses: actions/upload-artifact@v3
       with:
         name: dist-files
