--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,18 +9,14 @@ on:
 jobs:
 
   build:
-    runs-on: node:16-alpine3.16
+    runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v3
-    - name: 编译项目
+    - name: Build with Node.js
       run: |
-        cd ruoyi-ui
-        npm install
-        npm run build:prod
-      env:
-        CI: true
-    - name: 上传编译目录
+        docker run --rm -v ${{ github.workspace }}:/app -w /app/ruoyi-ui node:16-alpine3.16 sh -c "npm install && npm run build:prod"
+    - name: Upload Artifact
       uses: actions/upload-artifact@v3
       with:
         name: dist-files
