--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build and Deploy
+name: 编译代码
 
 on:
   push:
@@ -13,10 +13,17 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Build with Node.js
+    - name: 安装nodejs-16环境
+      uses: actions/setup-node@v3
+      with:
+        node-version: '16.x'
+
+    - name: 安装依赖和编译代码
       run: |
-        docker run --rm -v ${{ github.workspace }}:/app -w /app/ruoyi-ui node:16-alpine3.16 sh -c "npm install && npm run build:prod"
-    - name: Upload Artifact
+        cd ruoyi-ui
+        npm install && npm run build:prod
+
+    - name: 上传dist文件
       uses: actions/upload-artifact@v3
       with:
         name: dist-files
